--- a/assets/css/just-the-docs-dark.scss
+++ b/assets/css/just-the-docs-dark.scss
@@ -1,3 +1,3 @@
 ---
 ---
-{% include css/just-the-docs.scss.liquid color_scheme="dark" %}
+{% include css/tina-cms-test.scss.liquid color_scheme="dark" %}
