--- a/assets/css/just-the-docs-light.scss
+++ b/assets/css/just-the-docs-light.scss
@@ -1,3 +1,3 @@
 ---
 ---
-{% include css/just-the-docs.scss.liquid color_scheme="light" %}
+{% include css/tina-cms-test.scss.liquid color_scheme="light" %}
