--- a/assets/css/tina-cms-test-dark.scss
+++ b/assets/css/tina-cms-test-dark.scss
@@ -1,3 +1,3 @@
 ---
 ---
-{% include includes/css/tina-cms-test.scss.liquid color_scheme="dark" %}
+{% include css/tina-cms-test.scss.liquid color_scheme="dark" %}
